--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
+    "bootstrap": "^5.3.4",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "pinia": "^2.0.0",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1"
