--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.4",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "d3": "^7.9.0",
     "pinia": "^2.0.0",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
