--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "d3": "^7.9.0",
+    "musicbrainz-api": "^0.21.0",
     "pinia": "^2.0.0",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
