--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "devtools": "vue-devtools"
+    "devtools": "vue-devtools",
+    "start:proxy": "cd server && npm start",
+    "dev": "node start-dev.js"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
@@ -14,7 +16,6 @@
     "bootstrap": "^5.3.4",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
-    "d3": "^7.9.0",
     "musicbrainz-api": "^0.21.0",
     "pinia": "^2.0.0",
     "register-service-worker": "^1.7.2",
