--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "bootstrap": "^5.3.4",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "d3-scale": "^4.0.2",
     "musicbrainz-api": "^0.21.0",
     "node-fetch": "^2.7.0",
     "pinia": "^2.0.0",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
+    "vue-d3-sunburst": "^1.9.1",
     "vue-router": "^3.5.1"
   },
   "devDependencies": {
