--- a/package.json
+++ b/package.json
@@ -3,41 +3,45 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "dev": "vite",
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
+    "build": "vite build",
+    "build:cli": "vue-cli-service build",
+    "preview": "vite preview",
     "devtools": "vue-devtools",
-    "start:proxy": "cd server && npm start",
-    "dev": "node start-dev.js"
+    "start:proxy": "cd server && npm start"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
-    "bootstrap": "^5.3.4",
-    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "d3-scale": "^4.0.2",
+    "hammerjs": "^2.0.8",
     "musicbrainz-api": "^0.21.0",
     "node-fetch": "^2.7.0",
     "pinia": "^2.0.0",
     "register-service-worker": "^1.7.2",
-    "vue": "^2.6.14",
+    "vue": "^3.5.13",
     "vue-d3-sunburst": "^1.9.1",
-    "vue-router": "^3.5.1"
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-plugin-pwa": "~5.0.0",
-    "@vue/cli-plugin-router": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
+    "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/cli-plugin-babel": "5.0.0-beta.7",
+    "@vue/cli-plugin-pwa": "5.0.0-beta.7",
+    "@vue/cli-plugin-router": "5.0.0-beta.7",
+    "@vue/cli-service": "5.0.0-beta.7",
+    "@vue/compiler-sfc": "^3.5.13",
     "@vue/devtools": "6.5.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^8.0.0",
+    "eslint-plugin-vue": "^9.0.0",
+    "postcss": "^8.5.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "vue-template-compiler": "^2.6.14"
+    "tailwindcss": "^4.1.3",
+    "vite": "^6.2.5",
+    "vite-plugin-pwa": "^1.0.0"
   }
 }
