--- a/package.json
+++ b/package.json
@@ -3,11 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
     "serve": "vue-cli-service serve",
-    "build": "vite build",
-    "build:cli": "vue-cli-service build",
-    "preview": "vite preview",
+    "build": "vue-cli-service build",
     "devtools": "vue-devtools",
     "start:proxy": "cd server && npm start"
   },
@@ -27,7 +24,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
-    "@vitejs/plugin-vue": "^5.2.3",
     "@vue/cli-plugin-babel": "5.0.0-beta.7",
     "@vue/cli-plugin-pwa": "5.0.0-beta.7",
     "@vue/cli-plugin-router": "5.0.0-beta.7",
@@ -40,8 +36,6 @@
     "postcss": "^8.5.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
-    "tailwindcss": "^4.1.3",
-    "vite": "^6.2.5",
-    "vite-plugin-pwa": "^1.0.0"
+    "tailwindcss": "^3.4.17"
   }
 }
