--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
     "axios": "^1.8.4",
+    "canvas": "^3.1.0",
     "core-js": "^3.8.3",
     "d3-scale": "^4.0.2",
     "hammerjs": "^2.0.8",
@@ -20,7 +21,8 @@
     "register-service-worker": "^1.7.2",
     "vue": "^3.5.13",
     "vue-d3-sunburst": "^1.9.1",
-    "vue-router": "^4.0.13"
+    "vue-router": "^4.0.13",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
