--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "@vueuse/gesture": "^2.0.0",
+    "@vueuse/motion": "^3.0.3",
     "axios": "^1.8.4",
     "canvas": "^3.1.0",
     "core-js": "^3.8.3",
