--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "node-fetch": "^2.7.0",
     "pinia": "^2.0.0",
     "register-service-worker": "^1.7.2",
+    "swiper": "^11.2.6",
     "vue": "^3.5.13",
     "vue-d3-sunburst": "^1.9.1",
     "vue-router": "^4.0.13",
