--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "postcss": "^8.5.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "sql-lint": "^1.0.0",
     "tailwindcss": "^3.4.17"
   }
 }
